fix: ensure image upload directory is created on startup